# coco-postprocess

./: .gitignore  README.md  dependabot.yaml  pyproject.toml
.github/workflows/: lint.yaml  python-package.yml  tag_release.yml
scripts/: preparehtml.py
src/cocopp/: __init__.py  __main__.py  algportfolio.py  archiving.py  bbob-benchmarkinfos.json  bbob-benchmarkshortinfos.txt  bbob-biobj-benchmarkinfos.json  bbob-largescale-benchmarkinfos.json  bbob-largescalejoined-benchmarkinfos.json  bbob-mixint-benchmarkinfos.json  bestalg.py  captions.py  cococommands.py  config.py  dataformatsettings.py  findfiles.py  genericsettings.py  ppconverrorbars.py  ppfig.py  ppfigcons1.py  ppfigdim.py  ppfigparam.py  pplogloss.py  pprldistr.py  pprldistr2009_hardestRLB.py  pproc.py  ppsingle.py  pptable.py  pptex.py  preparetexforhtml.py  readalign.py  rungeneric.py  rungeneric1.py  rungenericmany.py  sanitycheck.py  test.py  testbedsettings.py  toolsdivers.py  toolsstats.py
src/cocopp/comp2/: ppfig2.py  pprldistr2.py  ppscatter.py
src/cocopp/compall/: organizeRTDpictures.py  ppfigcons.py  ppfigs.py  ppperfprof.py  pprldmany.py  pptables.py
src/cocopp/static/: pprldflex.css  pprldflex.html  pprldflex.js  sorttable.js
