[build-system]
requires = [
  "setuptools >= 67.0",
  "setuptools-scm >= 8",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "coco-postprocess"
authors = [
  {name="Umut Batu"},
  {name="Dimo Brockhoff"},
  {name="Paul Dufossé"},
  {name="Nikolaus Hansen"},
  {name="Filip Matzner"},
  {name="Raymond Ros"},
  {name="Dejan Tušar"},
]
description = "Benchmarking framework for all types of black-box optimization algorithms, postprocessing."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Intended Audience :: Education",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib >=3.5.0",
  "numpy >=1.21.0",
  "platformdirs >=3.8.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://numbbo.github.io"
Issues = "https://github.com/numbbo/coco-postprocess/issues"
Repository = "https://github.com/numbbo/coco-postprocess"

[tool.setuptools_scm]
version_file = "src/cocopp/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# select = []
ignore = [
  "E402", # Module level import not at top of file
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false
docstring-code-line-length = "dynamic"