[build-system]
requires = [
  "setuptools >= 67.0",
  "setuptools-scm >= 8",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "cocopp"
authors = [
  {name="Umut Batu"},
  {name="Dimo Brockhoff"},
  {name="Paul Dufossé"},
  {name="Nikolaus Hansen"},
  {name="Filip Matzner"},
  {name="Raymond Ros"},
  {name="Dejan Tušar"},
]
description = "Benchmarking framework for all types of black-box optimization algorithms, postprocessing."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: IPython",
  "Framework :: Jupyter",
  "Intended Audience :: Education",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "matplotlib >=3.5.0",
  "numpy >=1.21.0",
  "platformdirs >=3.8.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://numbbo.github.io"
Issues = "https://github.com/numbbo/coco-postprocess/issues"
Repository = "https://github.com/numbbo/coco-postprocess"

[tool.setuptools_scm]
version_file = "src/cocopp/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
